<resources>
    <string name="ReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
    <string name="NoSDCard">IMIS needs external memory card to run. Please insert memory card and restart the application.</string>
    <string name="ForceClose">Force Close</string>
    <string name="OfflineMode">Offline Mode</string>
    <string name="FileNOtFound">File not found.</string>
    <string name="GuaranteeNo">Guarantee No</string>
    <string name="ContentTitle">New release of Claim Management is now available.</string>
    <string name="ContentText">Click here to download.</string>
    <string name="NotificationAlertText">New update available.</string>
    <string name="SDCardReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
    <string name="SDCardMissing">Application needs external memory card to run. Please insert memory card and restart the application.</string>
    <string name="FTPConnectionFailed">Unable to connect the server. Operation aborted.</string>
    <string name="FailToUpload">Failed to Upload to server.</string>
    <string name="SomethingWentWrongServer">Something went wrong on the server.</string>
    <string name="app_name">IMIS CLAIMS</string>
    <string name="app_name_claim">Claim</string>
    <string name="app_name_enquire">Enquire</string>
    <string name="ManageBatch">MANAGE BATCH</string>
    <string name="ManageClaims">MANAGE CLAIMS</string>
    <string name="Submit">SUBMIT</string>
    <string name="HFCode">Health facility code</string>
    <string name="ClaimAdmin">Claim Administrator Code</string>
    <string name="BatchCode">Batch Code</string>
    <string name="PeriodFrom">Period From</string>
    <string name="PeriodTo">Period To</string>
    <string name="BatchDate">Batch Date</string>
    <string name="CHFID">ID Adherent</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="Diagnosis1">Diagnosis 1</string>
    <string name="Diagnosis2">Diagnosis 2</string>
    <string name="Diagnosis3">Diagnosis 3</string>
    <string name="Diagnosis4">Diagnosis 4</string>
    <string name="VisitType">Visit Type</string>
    <string name="Quantity">Quantity</string>
    <string name="Amount">Amount</string>
    <string name="Price">Price</string>
    <string name="SelectItem">Please select an item</string>
    <string name="SelectService">Please select a service</string>
    <string name="Add">Add +</string>
    <string name="HealthFacility">Health Facility Code</string>
    <string name="HealthFacilityName">Health Facility Name</string>
    <string name="ClaimCode">Claim Code</string>
    <string name="Scan">Scan</string>
    <string name="Item">Item</string>
    <string name="Service">Service</string>
    <string name="Total">Total</string>
    <string name="MissingHealthFacility">Please enter Health Facility Code</string>
    <string name="MissingClaimAdmin">Please enter Claim Administrator Code</string>
    <string name="MissingGuaranteeNo">Please enter Guarantee No</string>
    <string name="MissingClaimCode">Please enter Claim Code</string>
    <string name="MissingCHFID">Pleae enter CHFID</string>
    <string name="InvalidCHFID">Invalid CHFID</string>
    <string name="MissingStartDate">Please enter Start Date</string>
    <string name="MissingEndDate">Please enter End Date</string>
    <string name="MissingClaim">Please select atleast one item or service to submit the claim.</string>
    <string name="MissingDisease">Please select disease.</string>
    <string name="BiggerDate">End date cannot be smaller than the Start date.</string>
    <string name="AfterCurrentDate">End date cannot be later than the current date.</string>
    <string name="Ok">OK</string>
    <string name="ClaimPosted">Claim is posted successfully.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ConfirmDiscard">There is an unsaved claim. Do you want to discard and start new claim?</string>
    <string name="Of">of</string>
    <string name="Uploading">Uploading&#8230;</string>
    <string name="UploadAllClaims">Upload Claims</string>
    <string name="NoClaim">No claim found.</string>
    <string name="CheckInternet">Internet is required to communicate with the server.</string>
    <string name="BulkUpload">Data has been uploaded successfully. Please check your Rejected/Accepted folder to verify the server response.</string>
    <string name="MapItems">Map Items</string>
    <string name="MapServices">Map Services</string>
    <string name="Saving">Saving&#8230;</string>
    <string name="Emergency">Emergency</string>
    <string name="Referral">Referral</string>
    <string name="Other">Other</string>
    <string name="MissingVisitType">Please select visit type.</string>
    <string name="Back">Back</string>
    <string name="New">New Claim</string>
    <string name="Save">Post Claim</string>
    <string name="Options">Options</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="AddItems">Add Items</string>
    <string name="AddServices">Add Services</string>
    <string name="SelectDisease">Please select disease code</string>
    <string name="CheckUncheck">Check/Uncheck All</string>
    <string name="SaveMap">Save</string>
    <string name="NoItemMapped">No mapped item found</string>
    <string name="MappedItemMissing">In order to add an item to the claim please click menu and select the option Map Items.</string>
    <string name="NoServiceMapped">No mapped service found</string>
    <string name="MappedServiceMissing">In order to add a service to the claim please click menu and select the option Map Services.</string>
    <string name="SearchItems">Search Items</string>
    <string name="SearchServices">Search Services</string>
    <string name="Statistics">Statistics</string>
    <string name="GetStats">Request Statistics</string>
    <string name="NoStatFound">No data found</string>
    <string name="InProgress">In Progress...</string>
    <string name="InternetRequired">Internet connection is required.</string>
    <string name="title_activity_enquire">Enquire.</string>
    <string name="Go">Go</string>
    <string name="InsureeName">Adherent</string>
    <string name="Gender">Gender</string>
    <string name="DOB">DOB</string>
    <string name="GetingInsuuree">Getting Adherent info&#8230;</string>
    <string name="RecordNotFound">Member with this ID Adherent. does not exist.</string>
    <string name="change_language">Change Language</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="MemoryFull">Your phone memory if full please free some space and try again.</string>
    <string name="SelectItems">Please check items to map before saving</string>
    <string name="claim_code">Claim Code</string>
    <string name="type_here">Type here</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="Password">Password</string>
    <string name="synchronize">Synchronize</string>
    <string name="ZipAllClaims">Create Claims XML</string>
    <string name="reports">Reports</string>
    <string name="map_items">Map Items</string>
    <string name="map_services">Map Services</string>
    <string name="quit">Quit</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="Enter_Credentials">Please enter user name and password</string>
    <string name="Login_Successful">Login Successful</string>
    <string name="Logout_Successful">Logout Successful</string>
    <string name="LoginFail">Login Failed</string>
    <string name="dashboard">Dashboard</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="title_activity_report">Report</string>
    <string name="action_settings">Settings</string>
    <string name="ZipXMLCreated">Zipped XML file Created Successfully</string>
    <string name="AreYouSure">Are you sure you want to continue?</string>
    <string name="Continue">Continue</string>
    <string name="accepted_claims">Accepted Claims</string>
    <string name="rejected_claims">Rejected Claims</string>
    <string name="pending_claims">Pending Claims</string>
    <string name="code">code</string>
    <string name="permission_denied">Sorry some Permissions were not granted</string>
    <string name="release">Version: 1.3.1.6, Released: 31-10-2019</string>
    <string name="refresh_mapping">Refresh Mapping</string>
    <string name="error">Info</string>
    <string name="DownLoad">Downloading</string>
    <string name="Inserting">Inserting</string>
    <string name="Diagnoses">Diagnoses</string>
    <string name="Services">Services</string>
    <string name="Items">Items</string>
    <string name="MapSuccessful">Map Services and items successfully</string>
    <string name="getControls">Get Controls...</string>
    <string name="ControlSucessfully">Controls inserted successfully</string>
    <string name="Checking_For_Updates">Checking For Updates</string>
    <string name="Select_Language">Select Language</string>
    <string name="AccessDenied">Access Denied</string>
    <string name="installed_updates">Data downloaded successfully</string>
    <string name="mapping">Mapping</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="getMasterData">Download Master Data</string>
    <string name="verifying">Verifying</string>
    <string name="code_verified">Claim Code Accepted</string>
    <string name="invalid_code">Invalid Claim Administrator Code</string>
    <string name="get_master">Get Master Data</string>
    <string name="initializing">Initializing...</string>
    <string name="initializing_complete">Initializing Complete</string>
    <string name="application">Application</string>
    <string name="QuitConfirmation">Are you sure you want to quit?</string>
    <string name="retrieve">Retrieve</string>
    <string name="SearchClaims">Search Claims</string>
    <string name="Entered">Entered</string>
    <string name="Checked">Checked</string>
    <string name="Processed">Processed</string>
    <string name="Valuated">Valuated</string>
    <string name="Rejected">Rejected</string>
    <string name="visit_date_from">Visit Date From</string>
    <string name="visit_date_to">Visit Date To</string>
    <string name="date_processed_from">Date Processed</string>
    <string name="date_processed_to">Processed To</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="InsureeNumber">Insurance Number</string>
    <string name="date_claimed">Date Claimed</string>
    <string name="title_activity_claim_review">ClaimReview</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="PatientName">Patient Name</string>
    <string name="MainDg">Main Dg</string>
    <string name="SecDg1">Sec. Dg. 1</string>
    <string name="SecDg4">Sec. Dg. 4</string>
    <string name="Explanation">Explanation</string>
    <string name="ItemCode">Item Code</string>
    <string name="ItemName">Item Name</string>
    <string name="AppQty">App. Qty</string>
    <string name="AppPrice">App. Price</string>
    <string name="Justification">Justification</string>
    <string name="Status">Status</string>
    <string name="Result">Result</string>
    <string name="ServiceCode">Service Code</string>
    <string name="ServiceName">Service Name</string>
</resources>