<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:elevation="20dp"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:padding="10dp"
        android:background="@color/Orange2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/ServiceCode"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/ServiceName"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/Quantity"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/Price"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/Explanation"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/AppQty"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/AppPrice"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/Justification"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/Status"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/Valuated"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textStyle="bold"
            android:text="@string/Result"/>
    </LinearLayout>
    <LinearLayout
        android:elevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="5dp"
        android:padding="10dp"
        android:background="@drawable/bottom_side_border">

        <TextView
            android:id="@+id/ServiceCode"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/HealthFacility"/>
        <TextView
            android:id="@+id/ServiceName"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:background="@drawable/bottom_side_border"
            android:text="@string/HealthFacilityName"/>
        <TextView
            android:id="@+id/Qty"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/PatientName"/>
        <TextView
            android:id="@+id/Price"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/ClaimCode"/>
        <TextView
            android:id="@+id/Explanation"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textColor="@color/Green2"
            android:text="@string/MainDg"/>
        <TextView
            android:id="@+id/AppQty"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/SecDg1"/>
        <TextView
            android:id="@+id/AppPrice"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/SecDg4"/>
        <TextView
            android:id="@+id/Justification"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/visit_date_from"/>
        <TextView
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/visit_date_to"/>
        <TextView
            android:id="@+id/valuated"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:background="@drawable/bottom_side_border"
            android:text="@string/date_claimed"/>
        <TextView
            android:id="@+id/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Orange"
            android:text="@string/Result"/>
    </LinearLayout>

</LinearLayout>