<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:elevation="20dp"
    android:background="@drawable/corner_claims"
    android:layout_marginTop="10dp">
    
    <LinearLayout
        android:elevation="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/right_side_border"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Claim No"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Claim Status"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HealthFacility"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InsureeNumber"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_claimed"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_date_from"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_date_to"/>

    </LinearLayout>

    <LinearLayout
        android:elevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp">
        <TextView
            android:id="@+id/claimNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_side_border"
            android:text="Claim No"/>
        <TextView
            android:id="@+id/claimStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Claim Status"/>
        <TextView
            android:id="@+id/healthFacility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HealthFacilityName"/>
        <TextView
            android:id="@+id/insuranceNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_side_border"
            android:text="@string/InsureeNumber"/>
        <TextView
            android:id="@+id/dateClaimed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_claimed"/>
        <TextView
            android:id="@+id/visitDateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_date_from"/>
        <TextView
            android:id="@+id/visitDateTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_date_to"/>

    </LinearLayout>

</LinearLayout>